OO-3292: adapt assessment mode to the new curriculums